# Disced

./: .gitignore  main.py  pyproject.toml
utils/: config.py  discord.py  guilded.py
