[tool.poetry]
name = "guilded-py-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^9.1"
discord = "^1.7.3"
requests = "^2.26.0"
discord-webhook = "^0.14.0"
"guilded.py" = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
